# datahtml

./: .gitignore  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
datahtml/: __about__.py  __init__.py  _utils.py  agents.py  base.py  crawler.py  defaults.py  errors.py  facebook.py  google.py  google_trends.py  instagram.py  news.py  parsers.py  root.py  rss.py  site.py  sitemap.py  types.py  url_index.py  web.py  wikidata.py  youtube.py
datahtml/apis/: youtube.py
datahtml/contrib/: __init__.py  chrome.py
datahtml/contrib/chrome/: __init__.py  v5.py  v6.py
docs/: api_reference.rst  conf.py  index.rst
docs/api/: crawler.rst  parsers.rst  sitemap.rst  types.rst  web.rst
tests/: google_search.html  google_trends_rss.xml  instagram_profile.html  lanacion_article.html  robots.txt  root_carrefour_sitemap.xml  test_apis_youtube.py  test_facebook.py  test_google.py  test_google_trends.py  test_instagram.py  test_parsers.py  test_root.py  test_youtube.py  youtube_channel.html  youtube_channel_rss.xml  youtube_search.html  youtube_search_response.json  youtube_video.html  youtube_video.json  youtube_video_multiple_ids.json  youtube_video_response.json
